# CLIF-epidemiology-of-CRRT

./: .gitignore  README.md  buddy-test-report.md  msm_sensitivity_plan.md  outlier_config.json  pyproject.toml  requirements.txt  run_pipeline.bat  run_pipeline.sh  run_project.bat  run_project.sh  setup_r.ps1  setup_venv.bat  setup_venv.sh
archive/code/: 05c_low_dose_emulation.R  06_time_varying_MSM.R  06b_time_varying_MSM_sensitivity.R
code/: 00_cohort.ipynb  00_cohort.py  00_cohort_check.ipynb  01_cohort_identification.ipynb  01_create_wide_df.py  01_process_crrt.ipynb  02_analysis_summary.ipynb  02_construct_crrt_tableone.py  02_model.R  03_crrt_epidemiology.py  03_crrt_visualizations.py  03b_crrt_epi_smr.py  04_build_causal_df.py  04_build_msm_competing_risk_df.py  04_combine_site_results.py  04_missingness_analysis.ipynb  05_PSM_IPTW_CRRT_dose.R  05_severity_analysis.py  05b_dose_response_analysis.R  06_low_dose_characterization.py  06_time_varying_MSM.R  06b_time_varying_MSM_sensitivity.R  07_combine_site_results.py  07_crrt_descriptive_epi.py  08_low_dose_characterization.py  09_causal_consort_diagram.py  README.md  pipeline_helpers.py  pyCLIF.py  sankey_non_icu.py  smr_build_cohort.py  smr_build_mimic_dev.py  smr_common.py  smr_fit_apply.py  smr_fit_reference.py  sofa_calculator.py  utils.py  waterfall.py
code/archive/: 00_cohort.ipynb  05_model.R  (+7 more)
config/: clif_data_requirements.yaml  config_template.json  outlier_config.json  smr_reference_model.json
docs/: multi_site_preparation.md  planned_analyses.md
output/: README.md
utils/: README.md  config.py
