[project]
name = "clif-crrt"
version = "0.1.0"
description = "CLIF Epidemiology of CRRT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.9.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "pyarrow>=10.0.0",
    "pytz>=2023.3",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
    "ipykernel>=6.30.1",
    "clifpy>=0.3.8",
    "graphviz>=0.21",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["code"]
include-package-data = false

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
